# SatelliteSim

./: .gitmodules  CMakeLists.txt
assets/shaders/: backgroundfrag.glsl  backgroundvert.glsl  simplefrag.glsl  simplevert.glsl
glm/: manual.md
glm/doc/api/: a00105.html  a00105_source.html  a00123.html  a00123_source.html  a00245.html  a00351.html
glm/glm/ext/: matrix_projection.inl
libs/glad/include/glad/: gl.h
src/: Game.cpp  Game.h  main.cpp
src/game/: GameState.cpp  GameState.h  SatelliteSim.cpp  SatelliteSim.h
src/gfx/: AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Window.cpp  Window.h
src/util/: Image.cpp  Image.h
src/utils/: ShaderProgram.h
